--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -22,7 +22,7 @@
       "image": "https://www.fruitgravycompany.com/wp-content/uploads/2018/12/basket.jpg",
       "description": "yes",
       "quantity": 3,
-      "owner": "Test",
+      "owner": "SurferLover",
       "condition": "excellent"
     },
     {
@@ -54,7 +54,8 @@
     {
       "problem": "This site sucks",
       "description": "This site is horrible",
-      "user": "Developers"
+      "user": "Developers",
+      "owner": "John Foo Test"
     }
   ]
 }
