--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -19,7 +19,8 @@
       "description": "yes",
       "quantity": 3,
       "owner": "Test",
-      "condition": "excellent"
+      "condition": "excellent",
+      "categories": "supplies"
     },
     {
       "name": "Bicycle",
@@ -27,7 +28,8 @@
       "description": "yes",
       "quantity": 2,
       "owner": "Test",
-      "condition": "poor"
+      "condition": "poor",
+      "categories": "dormitory"
     },
     {
       "name": "Banana",
@@ -35,7 +37,8 @@
       "description": "yes",
       "quantity": 2,
       "owner": "Johnson",
-      "condition": "good"
+      "condition": "good",
+      "categories": "supplies"
     },
     {
       "name": "Boogie Board",
@@ -43,7 +46,8 @@
       "description": "yes",
       "quantity": 2,
       "owner": "Johnson",
-      "condition": "excellent"
+      "condition": "excellent",
+      "categories": "dormitory"
     }
   ],
   "defaultIssue": [
