come back to this later, lol.

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -101,9 +101,9 @@
   ],
   "defaultIssue": [
     {
-      "problem": "This site sucks",
-      "description": "This site is horrible",
-      "user": "Developers",
+      "problem": "Switch is a scam!",
+      "description": "He just took my money and ran!",
+      "user": "John Foo Test",
       "owner": "John Foo Test"
     }
   ],
