--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -90,6 +90,7 @@
     },
     {
       "name": "Limited Edition V2 Nintendo Switch Red Mario Joy Cons",
+      "email": "admin@foo.com",
       "image": "https://images.craigslist.org/00l0l_8a7PC89jv6D_600x450.jpg",
       "description": "yes",
       "price": 350,
