--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -56,7 +56,7 @@
       "price": 200,
       "owner": "John Foo Test",
       "condition": "poor",
-      "categories": "dormitory"
+      "categories": "outdoors"
     },
     {
       "name": "Vintage Leather Jacket",
@@ -66,7 +66,10 @@
       "price": 45,
       "owner": "John Foo Test",
       "condition": "excellent",
-      "categories": "clothing"
+      "categories": "clothing",
+      "clothes": [
+        "Men", "Tops",
+      ]
     },
     {
       "name": "Nintendo Switch – Neon Red and Neon Blue Joy-Con",
@@ -106,7 +109,7 @@
       "price": 20,
       "owner": "SurferLover",
       "condition": "excellent",
-      "categories": "dormitory"
+      "categories": "outdoors"
     },
     {
       "name": "Tent",
