?? maybe now it'll work

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -68,7 +68,7 @@
       "condition": "excellent",
       "categories": "clothing",
       "clothes": [
-        "Men", "Tops",
+        "Men", "Top"
       ]
     },
     {
