--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -66,10 +66,7 @@
       "price": 45,
       "owner": "John Foo Test",
       "condition": "excellent",
-      "categories": "clothing",
-      "clothes": [
-        "Men", "Top"
-      ]
+      "categories": "clothing"
     },
     {
       "name": "Nintendo Switch – Neon Red and Neon Blue Joy-Con",
