--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -66,7 +66,7 @@
       "clothes": [],
       "electronics": [],
       "dormitory": [],
-      "outdoors": ["sports & fitness"],
+      "outdoors": ["sports & fitness", "transportation"],
       "school": []
     },
     {
