took out some of my defaults for now

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -119,7 +119,7 @@
       "categories": "outdoors"
     },
     {
-      "name": "iPhone Xs Case | 10ft. Drop Tested | Carbon Case | Ultra Slim | Lightweight | Scratch Resistant | Wireless Chargin",
+      "name": "iPhone Xs Case | 10ft. Drop Tested | Carbon Case | Ultra Slim | Lightweight | Wireless Chargin",
       "email": "kason@foo.com",
       "image": "https://images-na.ssl-images-amazon.com/images/I/71qA-MB6-HL._AC_SL1192_.jpg",
       "description": "Carbon Fiber Case fits perfectly, looks great and feels good in your hand. The case is thin and light, but provides excellent protection of your phone. Easy to put on and off. The rubber bumper provides 100% protection for your phone in the event of a fall and the raised lips around the camera protect it from scratches when it touches any surface. Carbon Case is slim, easy to hold and has sleek design. The buttons of the case make it easier to adjust volume, take screen shots, and shut the device on and off. It’s not too bulky or heavy, but has enough space above the edges of the screen to protect it from a drop. It is wireless charging friendly, has absolutely no interference to Wi-Fi, GPS signal and wireless charging. It’s easy to access all buttons and ports; it has extra lift around the front camera lens area. Each opening is accurately aligned. Slim profile does not add any bulk to your device without sacrificing protection. Kitoo carbon fiber cover will be a wonderful addition to your perfect image!",
@@ -129,7 +129,7 @@
       "categories": "electronics"
     },
     {
-      "name": "Hydro Flask Water Bottle - Stainless Steel & Vacuum Insulated - Wide Mouth with Leak Proof Flex Cap - 32 oz, Cobalt",
+      "name": "Hydro Flask Water Bottle Wide Mouth with Leak Proof Flex Cap - 32 oz, Cobalt",
       "email": "kason@foo.com",
       "image": "https://images-na.ssl-images-amazon.com/images/I/619c%2BPxufbL._AC_SL1500_.jpg",
       "description": "Newly produced Hydro Flasks do not feature a registered trademark symbol next to the logo\nKeeps beverages cold up to 24 hours and hot up to 12 hours when using the lid\nBPA-free and phthalate-free; 18/8 food-grade stainless steel\nCompatible with our Hydro Flip Lid and Wide Mouth Straw Lid",
@@ -139,7 +139,7 @@
       "categories": "outdoors"
     },
     {
-      "name": "HP ENVY 5055 Wireless All-in-One Photo Printer, HP Instant Ink & Amazon Dash Replenishment Ready (M2U85A)",
+      "name": "HP ENVY 5055 Wireless All-in-One Photo Printer, HP Instant Ink (M2U85A)",
       "email": "kason@foo.com",
       "image": "https://images-na.ssl-images-amazon.com/images/I/61FbdpdKZlL._AC_SL1500_.jpg",
       "description": "Step up and create projects at home – Print, scan, and copy borderless, high-quality photos and documents with crisp, sharp text using this versatile all-in-one printer\nOur most powerful printing app ever – The HP Smart app allows you to easily set up your wireless printer, scan documents with your camera, and print from social media or the cloud, such as iCloud, Google Drive, and Dropbox",
@@ -149,7 +149,7 @@
       "categories": "electronics"
     },
     {
-      "name": "Asus VG245H 24 inchFull HD 1080p 1ms Dual HDMI Eye Care Console Gaming Monitor with FreeSync/Adaptive Sync, Black, 24-inch",
+      "name": "Asus VG245H 24 inchFull HD 1080p 1ms Dual HDMI Eye Care Console Gaming Monitor, Black, 24-inch",
       "email": "kason@foo.com",
       "image": "https://images-na.ssl-images-amazon.com/images/I/71nFX3tkI2L._AC_SL1500_.jpg",
       "description": "1ms response time featuring ASUS Game Fast Input Technology and dual HDMI ports for a smooth console gaming experience. The brightness is 250 cd/㎡\nASUS Eye Care technology with flicker free and blue light filter to minimize eye fatigue.Physical Dimension with Stand (WxHxD) : 22.0x(14.1 ~19.25)x 8.30 inches. Physical Dimension without Stand (WxHxD) : 22.0 x 12.95 x 1.96 inches",
@@ -157,46 +157,6 @@
       "owner": "Gomi-san",
       "condition": "excellent",
       "categories": "electronics"
-    },
-    {
-      "name": "adidas Men's Originals Mens Men's originals snapback flatbrim cap",
-      "email": "kason@foo.com",
-      "image": "https://assets.adidas.com/images/w_840,h_840,f_auto,q_auto:sensitive,fl_lossy/6507acfc875f4cadb191a802014804cf_9366/Youth_Originals_Trefoil_Chain_White_CI1355_04_standard.jpg",
-      "description": "The Youth Originals Trefoil Chain is new for  Lifestyle on adidas.com. Like new, barely used and still pure white.",
-      "price": 26,
-      "owner": "Gomi-san",
-      "condition": "excellent",
-      "categories": "clothing"
-    },
-    {
-      "name": "Lasko FBA 2521 Oscillating Stand Fan, 16-Inch, 1-Pack, Black FFP",
-      "email": "kason@foo.com",
-      "image": "https://images-na.ssl-images-amazon.com/images/I/81dR9We5O8L._AC_SL1500_.jpg",
-      "description": "WHAT A NICE BREEZE – Powered by 3 energy-efficient speeds, this 3-blade fan with electric plug-in motor moves a lot of air, even on the lowest setting. This simple-to-use, basic stand fan is a great value for creating a cooling breeze in both small and large household spaces.\nBEAT THE SUMMER HEAT – If you live in the heat with no central air or have window AC units that do a poor job of moving air around your whole house or apartment, this fan easily brings comfort to the hottest rooms. Tilt-back head and optional oscillation directs the wind any way you want from floor to ceiling; making this fan a life saver when it’s hot & humid outdoors.",
-      "price": 22.30,
-      "owner": "Gomi-san",
-      "condition": "excellent",
-      "categories": "dormitory"
-    },
-    {
-      "name": "Discrete Mathematics and Its Applications Seventh Edition 7th Edition",
-      "email": "kason@foo.com",
-      "image": "https://images-na.ssl-images-amazon.com/images/I/41jVg6Rkq9L._SX403_BO1,204,203,200_.jpg",
-      "description": "Discrete Mathematics textbook for ICS 141 and ICS 241. This will help a lot for the problems in the back.",
-      "price": 25.99,
-      "owner": "Gomi-san",
-      "condition": "poor",
-      "categories": "school"
-    },
-    {
-      "name": "14-Piece Kitchen Knife Set with Block",
-      "email": "kason@foo.com",
-      "image": "https://images.craigslist.org/00Q0Q_fRIZr27gkzQ_600x450.jpg",
-      "description": "Chefmates Basics 14-Piece Knife Set with Block.\n\nDaughter graduated from college and moved home selling her dorm items she is not using now.\n\nLightly used, clean, no odors or stains. All stainless steel.\n\nProviding all the essentials in one sleek collection, the chef mate 14-piece knife set with block makes a thoughtful gift idea for college grads, newlyweds, or anyone setting up a first-time kitchen.\n\nJust as useful for those who know their way around a kitchen as it is for newbie chefs just learning the ropes, the set offers the full range of cutlery needed to start slicing, dicing, and chopping away.\n\nAn attractive pine wood block comes included to ensure safe storage of all the pieces and to keep the collection within easy reach on the countertop.\n\nIncludes\n8-inch chef's knife\n\n8-inch slicing knife\n\n8-inch bread knife\n\n5.5-inch utility knife\n\n3.5-inch paring knife\n\n(6) 4.5-inch steak knives\n\n8-inch kitchen shears\n\nPine wood block",
-      "price": 15,
-      "owner": "Gomi-san",
-      "condition": "good",
-      "categories": "dormitory"
     }
   ],
   "defaultIssue": [
