small changes to defaults

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -215,7 +215,7 @@
       "categories": "electronics",
       "clothes": [],
       "electronics": ["accessories"],
-      "dormitory": ["appliances"],
+      "dormitory": [],
       "outdoors": [],
       "school": []
     },
