dust off the ol' cobwebs.

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -262,7 +262,7 @@
       "electronics": [],
       "dormitory": [],
       "outdoors": [],
-      "school": []
+      "school": ["textbook"]
     },
     {
       "name": "14-Piece Kitchen Knife Set with Block",
