try to figure our flava favs

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -48,6 +48,7 @@
       "owner": "John Foo Test",
       "condition": "excellent",
       "categories": "school",
+      "favorites": [],
       "clothes": [],
       "electronics": [],
       "dormitory": [],
@@ -63,6 +64,7 @@
       "owner": "John Foo Test",
       "condition": "poor",
       "categories": "outdoors",
+      "favorites": [],
       "clothes": [],
       "electronics": [],
       "dormitory": [],
@@ -78,6 +80,7 @@
       "owner": "John Foo Test",
       "condition": "excellent",
       "categories": "clothing",
+      "favorites": [],
       "clothes": ["men", "top"],
       "electronics": [],
       "dormitory": [],
@@ -92,6 +95,7 @@
       "price": 298.99,
       "owner": "John Foo Test",
       "condition": "excellent",
+      "favorites": [],
       "categories": "electronics",
       "clothes": [],
       "electronics": ["games", "accessories"],
@@ -108,6 +112,7 @@
       "owner": "SurferLover",
       "condition": "good",
       "categories": "electronics",
+      "favorites": [],
       "clothes": [],
       "electronics": ["accessories"],
       "dormitory": [],
@@ -123,6 +128,7 @@
       "owner": "SurferLover",
       "condition": "excellent",
       "categories": "electronics",
+      "favorites": [],
       "clothes": [],
       "electronics": ["games", "accessories"],
       "dormitory": [],
@@ -137,6 +143,7 @@
       "price": 20,
       "owner": "SurferLover",
       "condition": "excellent",
+      "favorites": [],
       "categories": "outdoors",
       "clothes": [],
       "electronics": [],
@@ -154,6 +161,7 @@
       "condition": "excellent",
       "categories": "outdoors",
       "clothes": [],
+      "favorites": [],
       "electronics": [],
       "dormitory": [],
       "outdoors": ["camping & hiking"],
@@ -170,6 +178,7 @@
       "categories": "electronics",
       "clothes": [],
       "electronics": ["accessories"],
+      "favorites": [],
       "dormitory": [],
       "outdoors": [],
       "school": []
@@ -183,6 +192,7 @@
       "owner": "Gomi-san",
       "condition": "fair",
       "categories": "outdoors",
+      "favorites": [],
       "clothes": [],
       "electronics": [],
       "dormitory": [],
@@ -200,6 +210,7 @@
       "categories": "electronics",
       "clothes": [],
       "electronics": ["accessories"],
+      "favorites": [],
       "dormitory": ["appliances"],
       "outdoors": [],
       "school": []
@@ -215,6 +226,7 @@
       "categories": "electronics",
       "clothes": [],
       "electronics": ["accessories"],
+      "favorites": [],
       "dormitory": [],
       "outdoors": [],
       "school": []
@@ -227,6 +239,7 @@
       "price": 26,
       "owner": "Gomi-san",
       "condition": "excellent",
+      "favorites": [],
       "categories": "clothing",
       "clothes": ["men"],
       "electronics": [],
@@ -243,6 +256,7 @@
       "owner": "Gomi-san",
       "condition": "excellent",
       "categories": "dormitory",
+      "favorites": [],
       "clothes": [],
       "electronics": [],
       "dormitory": ["appliances"],
@@ -258,6 +272,7 @@
       "owner": "Gomi-san",
       "condition": "poor",
       "categories": "school",
+      "favorites": [],
       "clothes": [],
       "electronics": [],
       "dormitory": [],
@@ -274,6 +289,7 @@
       "condition": "good",
       "categories": "dormitory",
       "clothes": [],
+      "favorites": [],
       "electronics": [],
       "dormitory": [],
       "outdoors": [],
