--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -48,7 +48,7 @@
       "owner": "John Foo Test",
       "condition": "excellent",
       "categories": "school",
-      "favorites": [],
+      "favorite": [],
       "clothes": [],
       "electronics": [],
       "dormitory": [],
@@ -64,7 +64,7 @@
       "owner": "John Foo Test",
       "condition": "poor",
       "categories": "outdoors",
-      "favorites": [],
+      "favorite": [],
       "clothes": [],
       "electronics": [],
       "dormitory": [],
@@ -80,7 +80,7 @@
       "owner": "John Foo Test",
       "condition": "excellent",
       "categories": "clothing",
-      "favorites": [],
+      "favorite": [],
       "clothes": ["men", "top"],
       "electronics": [],
       "dormitory": [],
@@ -95,7 +95,7 @@
       "price": 298.99,
       "owner": "John Foo Test",
       "condition": "excellent",
-      "favorites": [],
+      "favorite": [],
       "categories": "electronics",
       "clothes": [],
       "electronics": ["games", "accessories"],
@@ -112,7 +112,7 @@
       "owner": "SurferLover",
       "condition": "good",
       "categories": "electronics",
-      "favorites": [],
+      "favorite": [],
       "clothes": [],
       "electronics": ["accessories"],
       "dormitory": [],
@@ -128,7 +128,7 @@
       "owner": "SurferLover",
       "condition": "excellent",
       "categories": "electronics",
-      "favorites": [],
+      "favorite": [],
       "clothes": [],
       "electronics": ["games", "accessories"],
       "dormitory": [],
@@ -143,7 +143,7 @@
       "price": 20,
       "owner": "SurferLover",
       "condition": "excellent",
-      "favorites": [],
+      "favorite": [],
       "categories": "outdoors",
       "clothes": [],
       "electronics": [],
@@ -161,7 +161,7 @@
       "condition": "excellent",
       "categories": "outdoors",
       "clothes": [],
-      "favorites": [],
+      "favorite": [],
       "electronics": [],
       "dormitory": [],
       "outdoors": ["camping & hiking"],
@@ -178,7 +178,7 @@
       "categories": "electronics",
       "clothes": [],
       "electronics": ["accessories"],
-      "favorites": [],
+      "favorite": [],
       "dormitory": [],
       "outdoors": [],
       "school": []
@@ -192,7 +192,7 @@
       "owner": "Gomi-san",
       "condition": "fair",
       "categories": "outdoors",
-      "favorites": [],
+      "favorite": [],
       "clothes": [],
       "electronics": [],
       "dormitory": [],
@@ -210,7 +210,7 @@
       "categories": "electronics",
       "clothes": [],
       "electronics": ["accessories"],
-      "favorites": [],
+      "favorite": [],
       "dormitory": ["appliances"],
       "outdoors": [],
       "school": []
@@ -226,7 +226,7 @@
       "categories": "electronics",
       "clothes": [],
       "electronics": ["accessories"],
-      "favorites": [],
+      "favorite": [],
       "dormitory": [],
       "outdoors": [],
       "school": []
@@ -239,7 +239,7 @@
       "price": 26,
       "owner": "Gomi-san",
       "condition": "excellent",
-      "favorites": [],
+      "favorite": [],
       "categories": "clothing",
       "clothes": ["men"],
       "electronics": [],
@@ -256,7 +256,7 @@
       "owner": "Gomi-san",
       "condition": "excellent",
       "categories": "dormitory",
-      "favorites": [],
+      "favorite": [],
       "clothes": [],
       "electronics": [],
       "dormitory": ["appliances"],
@@ -272,7 +272,7 @@
       "owner": "Gomi-san",
       "condition": "poor",
       "categories": "school",
-      "favorites": [],
+      "favorite": [],
       "clothes": [],
       "electronics": [],
       "dormitory": [],
@@ -289,7 +289,7 @@
       "condition": "good",
       "categories": "dormitory",
       "clothes": [],
-      "favorites": [],
+      "favorite": [],
       "electronics": [],
       "dormitory": [],
       "outdoors": [],
